# prox_learning

./: .gitignore  .gitmodules  ACT_HOUSE1_MUG.md  EXPERIMENTS.md  README.md  RUNBOOK.md  TODO.md  pointcloud.ipynb  pyproject.toml  structure.md  update.md
analysis_output/: 2026-05-13_tempagg_smoke_writeup.md  related_work_scan.md
assets/: README.md
diagnostics_output/: act_inference_probe.py
docs/: CHANGELOG.md  PROJECT.md  README.md  SKIN_PIPELINE.md  STATUS.md  TIMELINE.md
fr3_skin_mujoco/: fr3_full_skin_fixed.urdf  fr3_robotiq.meta.json  fr3_robotiq.xml  fr3_skin_mujoco.py
pact/: README.md  __init__.py
paper/: section3_proximity_signal_draft.md
pla/: __init__.py  dataset.py  diagnostics.py  eval.py  eval_policy.py  policy.py  proximity_encoder.py  train.py
scratch/: check_keys.py  run_house6_retry.py  run_pilot.py  run_pilot.sh  run_pilot_scale.py  run_prox_necessity_pilot.py
scripts/: _bench_one_house_mug.py  action_variance_per_phase.py  aggregate_pact_eval.py  append_rand_object_to_ep0.py  attention_vs_activity.py  audit_sensor_activation.py  automation_after_epoch_sweep.sh  automation_after_mask_mean.sh  backfill_wandb_from_log.py  build_combined_h1_h3.py  build_mug_random_everything_videos.py  collect_data.sh  convert_mug_random_to_act.py  convert_pla_to_act.py  convert_smoke_to_act.py  duplicate_one_trajectory.py  eval_act_prox_aggregate.sh  eval_all.sh  failure_taxonomy.py  inspect_pact_trajectory.py  joint_sensor_ranking.py  launch_medium_ablations.sh  launch_medium_v1.sh  lock_clutter_bins.py  merge_chunks.py  merge_n20_chunks.py  (+44 more)
(+298 files in other folders)
